examples/misc/error/compilation/eval_match_let-expr.bfml
let _ =
  let a :: b = nil in
  a

let main = []